SERVER-70974  Fix early-exits triggered when user specifies TCP Fast Open server parameters